# Atari26K

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  package-lock.json
.github/workflows/: build.yml
src/: lib.rs
src/cpu/: interrupts.rs  mod.rs  opcodes.rs  registers.rs  status_flags.rs
www/: .eslintrc.js  package-lock.json  package.json  webpack.config.js
www/public/: index.html
www/src/: bootstrap.js  index.js
www/src/components/: App.jsx  Emulator.jsx  Test.jsx
www/src/emulator/: atari2600.js  riot.js  tia.js  tia_color.js
